--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -8,6 +8,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    services:
+      traefik:
+        image: traefik:v2.5
+        ports:
+          - 80:80
+        volumes:
+          - ./servers/config/gateway/traefik.yml:/etc/traefik/traefik.yml
+          - ./servers/config/gateway/dynamic:/etc/traefik/dynamic/fileConfig.yml
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
