lib-traefik-integration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,7 +14,7 @@ plugins:
         - python:
         - php:
       min_tokens: 50
-      max_blocks: 10
+-     max_blocks: 10
   eslint:
     enabled: true
     channel: "eslint-8"
