serv.yml changes

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -16,7 +16,7 @@ jobs:
           - 80:80
         volumes:
           - ${{ github.workspace }}/servers/config/gateway/traefik.yml:/etc/traefik/traefik.yml
-          - ${{ github.workspace }}/servers/config/gateway/dynamic:/etc/traefik/dynamic/fileConfig.yml
+          - ${{ github.workspace }}/servers/config/gateway/dynamic:/etc/traefik/dynamic
 
     steps:
       - name: Checkout
