change port, revert package.json

--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -65,7 +65,7 @@
       "../coverage/"
     ],
     "rootDir": "",
-    "testRegex": ".*\\.spec.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
