--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -27,13 +27,13 @@ jobs:
           yarn test -i
         env:
           PORT: 4001
-          LOCAL_PATH: ${{ github.workspace }}/DTaaS/files/
+          LOCAL_PATH: ${{ github.workspace }}/files/
           GITLAB_GROUP: dtaas
           GITLAB_URL: https://gitlab.com/api/graphql
           TOKEN: token
           MODE: local
           LOG_LEVEL: debug
-          TEST_PATH: ${{ github.workspace }}/DTaas/servers/lib/test/data/test_assets
+          TEST_PATH: ${{ github.workspace }}/servers/lib/test/data/test_assets
           APOLLO_PATH: /lib
 
       - name: Upload unit test coverage to Codecov
