--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -19,17 +19,11 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
 
-      # - name: Run the linting checks
-      #   run: |
-      #     cd servers/lib
-      #     yarn install
-      #     yarn syntax
-
-      - name: Build the lib microservice
+      - name: Run the linting checks
         run: |
-          cd servers/lib	
-          yarn install	
-          yarn build
+          cd servers/lib
+          yarn install
+          yarn syntax
 
       - name: Run lib microservice tests
         run: |
