--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -20,13 +20,7 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
 
-      # - name: Run the linting checks
-      #   run: |
-      #     cd servers/lib
-      #     yarn install
-      #     yarn syntax
-
-      - name: Build the lib microservice
+      - name: Run the linting checks
         run: |
           cd servers/lib
           yarn install
