--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -52,22 +52,22 @@ http:
     dtaas:
       loadBalancer:
         servers:
-          - url: "http://localhost:4000"
+          - url: 'http://localhost:4000'
 
     user1:
       loadBalancer:
         servers:
-          - url: "http://localhost:8090"
+          - url: 'http://localhost:8090'
 
     user2:
       loadBalancer:
         servers:
-          - url: "http://localhost:8091"
+          - url: 'http://localhost:8091'
 
     grafana:
       loadBalancer:
         servers:
-          - url: "http://localhost:3000"
+          - url: 'http://localhost:3000'
 
     lib:
       loadBalancer:
