--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -25,6 +25,12 @@ jobs:
           yarn install
           yarn syntax
 
+      - name: Build the lib microservice
+        run: |
+          cd servers/lib	
+          yarn install	
+          yarn build
+
       - name: Run lib microservice tests
         run: |
           cd servers/lib
