--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,6 +32,12 @@ jobs:
           yarn install	
           yarn build
 
+      - name: Build the lib microservice
+        run: |
+          cd servers/lib	
+          yarn install	
+          yarn build
+
       - name: Run lib microservice tests
         run: |
           cd servers/lib
