--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -67,4 +67,4 @@ http:
     lib:
       loadBalancer:
         servers:
-          - url: "http://localhost:4001"
+          - url: "http://192.168.1.12:4001"
