--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -16,22 +16,55 @@ http:
         - basic-auth
       service: user1
 
+    user2:
+      entryPoints:
+        - http
+      rule: 'Host(`localhost`) && PathPrefix(`/user2`)'
+      middlewares:
+        - basic-auth
+      service: user2
+
+    vis:
+      entryPoints:
+        - http
+      rule: 'Host(`localhost`) && PathPrefix(`/vis`)'
+      service: grafana
+
+    lib:
+      entryPoints:
+        - http
+      rule: 'Host(`localhost`) && PathPrefix(`/lib`)'
+      service: lib
 
   # Middleware: Basic authentication
   middlewares:
     basic-auth:
       basicAuth:
-        usersFile: "/etc/traefik/auth"
-
+        usersFile: '/etc/traefik/auth'
+        removeHeader: true
 
   services:
     dtaas:
       loadBalancer:
         servers:
-          - url: "http://localhost:4000"
+          - url: 'http://localhost:4000'
 
     user1:
       loadBalancer:
         servers:
-          - url: "http://localhost:8090"
+          - url: 'http://localhost:8090'
 
+    user2:
+      loadBalancer:
+        servers:
+          - url: 'http://localhost:8091'
+
+    grafana:
+      loadBalancer:
+        servers:
+          - url: 'http://localhost:3000'
+
+    lib:
+      loadBalancer:
+        servers:
+          - url: 'http://localhost:4001'
