Sign in refactor (#65)
* Signin is now using layton

* remove password field from SignIn.test

* remove password field from e2e/Auth.test

---------

Co-authored-by: Burnfarm <mathias.braendgaard@gmail.com>

Fixed menu bug + renamed custom prop

Fixed add button

Fix/fetch details (#66)

To also fetch details via the GraphQL API and let it be displayed where applicable.

To combat some of the issues faced, the GitHub Actions needed some changes. Notably, it is now running the install script during the build process. This ensures the playwright is correctly configured.

---
- Playwright now saves trace information on failing tests as [artifacts in Github Action](https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts).
- Changed username in tests to match existing repository (`user1`) to avoid thrown errors.
- Tests are now done in parallel (4 workers).
- Tests now use a more robust locator (getBy).

- Removed isDir property from model.
- Can now fetch assets and their descriptions.
- Renamed the queries file to "gitLab" and added comments.
- `useAssets()` is now composed of helper functions.

- moved relevant helper function to apiUtil test.
- apiUtil is now testing descriptions. No exceptions has been tested yet.
- small optimization on [envUtil.test.ts](https://github.com/Omarley7/DTaaS-Bachelor-new-GUI/pull/66/files#diff-3ed5360b6c9b908de27245e7f781d9ea9c787db29580403f6c05d20d3b9fa815 "client/test/unitTests/Util/envUtil.test.ts").
- Fixed error with mock `Assets` - path needs to include the name of the file too.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Run the linting checks
         run: |
           cd client/	
-          yarn install	
+          yarn install
           yarn syntax
       - name: Build the React SPA website
         run: |
           cd client/	
-          yarn install	
+          ./script/install.bash 
           yarn build
           yarn configapp dev
       - name: Run client unit and integration tests
@@ -42,6 +42,12 @@ jobs:
           yarn install	
           yarn test -u
           yarn test -i
+      - name: 'Upload Artifact'
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: E2E-error-trace
+          path: client/test-results
       - name: Upload unit test coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
