--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -21,6 +21,7 @@
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.12.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
