Simplifies sign in page and restructures docs (#57)
  - Simple SignIn page to just username
  - Restructures docs (#68)
  - Updates text descriptions on Library and Digital Twins pages
  - Refactors the page layout and improves tests

---------
Co-authored-by: Asger <71492620+SyntaxXeror@users.noreply.github.com>

rebased for integration server

unit tests

updated test script for e2e test

Codeclimate fix

Codeclimate fix 2

WIP 01

WIP 02

WIP 03

WIP 04

WIP 05

WIP 06

WIP 07

WIP 08

WIP 09

WIP-10

WIP-11

WIP-12

Fix testing for lib microservice (#62)

  - Corrects the failing integration tests
  -  Improves documentation for lib microservice

updated env files and moved username storage to Authentication.ts

Changed auth.error msg, moved username storing, test script updated, documentation updates, test updates

formatted code

Integration tests added, yarn lock and README updated

fixed codeclimate

Codeclimate

E2E testing working

File content + GraphQL compliance (#65)

* skeleton code

* traefik config for dashboard

* fix config for traefik & lib

* traefik & lib fix

- created bash script that creates fileconfig file, and inserts correct ip addres from .env variable.

* automate test w traefik and lib

* change IP addres so it works on github remotely

* lib-traefik-integration

* change server.yml

* serv.yml changes

* changes

* changess

* move traefik test, structure tests

* traefik & lib fix

- created bash script that creates fileconfig file, and inserts correct ip addres from .env variable.

* integration test for traefik and lib microservice

* automate test w traefik and lib

* remove port numer 80 from url

* syntax fixes

* increase sleep and set a timeout

* add timeout for traefik test

* adjust port, remove dashboard, change address to localhost

* changes

* move traefik test, structure tests

* remove traefik test - feature ready

* change port, revert package.json

* remove traefik test bashes

* remove sleep

* remove aftereach

* 

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,7 +36,8 @@ jobs:
         run: |
           cd servers/lib
           yarn install
-          yarn test -a
+          yarn test -u
+          yarn test -i
         env:
           PORT: 4001
           LOCAL_PATH: ${{ github.workspace }}/files
@@ -45,8 +47,7 @@ jobs:
           MODE: gitlab
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
-
-      - name: Upload unit test coverage to Codecov
+      - name: Upload unit, integration, and e2e test coverage for all to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: servers/lib/coverage/clover.xml
