--- a/client/package.json
+++ b/client/package.json
@@ -41,12 +41,13 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-oidc-context": "^2.2.2",
     "react-is": "^18.2.0",
+    "react-oidc-context": "^2.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-tabs": "^6.0.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.0.1",
     "styled-components": "^5.3.9",
