--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -46,7 +46,7 @@ jobs:
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
 
-      - name: Upload unit test coverage to Codecov
+      - name: Upload unit, integration, and e2e test coverage for all to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: servers/lib/coverage/clover.xml
