--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -27,7 +27,7 @@ http:
     vis:
       entryPoints:
         - http
-      rule: "Host(`localhost`) && PathPrefix(`/vis`)"
+      rule: 'Host(`localhost`) && PathPrefix(`/vis`)'
       service: grafana
 
     lib:
@@ -40,56 +40,31 @@ http:
   middlewares:
     basic-auth:
       basicAuth:
-        usersFile: "/etc/traefik/auth"
+        usersFile: '/etc/traefik/auth'
         removeHeader: true
-    dashboard:
-      entryPoints:
-        - http
-      rule: "Host(`gateway.localhost`)"
-      service: api@internal
 
   services:
     dtaas:
       loadBalancer:
         servers:
-          - url: "http://localhost:4000"
+          - url: 'http://localhost:4000'
 
     user1:
       loadBalancer:
         servers:
-          - url: "http://localhost:8090"
+          - url: 'http://localhost:8090'
 
     user2:
       loadBalancer:
         servers:
-          - url: "http://localhost:8091"
+          - url: 'http://localhost:8091'
 
     grafana:
       loadBalancer:
         servers:
-          - url: "http://localhost:3000"
+          - url: 'http://localhost:3000'
 
     lib:
       loadBalancer:
         servers:
-          - url: "http://localhost:4000"
-
-    user1:
-      loadBalancer:
-        servers:
-          - url: "http://localhost:8090"
-
-    user2:
-      loadBalancer:
-        servers:
-          - url: "http://localhost:8091"
-
-    grafana:
-      loadBalancer:
-        servers:
-          - url: "http://localhost:3000"
-
-    lib:
-      loadBalancer:
-        servers:
-          - url: "http://localhost:4001"
+          - url: 'http://localhost:4001'
