--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
+    "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "type-graphql": "^2.0.0-beta.2"
@@ -64,7 +65,10 @@
       "../src/app.module.ts",
       "../src/main.ts",
       "../src/files/files.module.ts",
-      "../coverage/"
+      "../coverage/",
+      "../src/files/queries.ts",
+      "../lib/util.ts",
+      "../lib/src/types.ts"
     ],
     "rootDir": "",
     "testRegex": ".*\\.spec\\.ts$",
