--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,13 +32,21 @@ jobs:
           yarn install	
           yarn build
 
+      - name: print working directory
+        run: pwd
+
+      - name: Upload unit, integration, and e2e test coverage for all to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: servers/lib/coverage/clover.xml
+          flags: lib-microservice
+
       - name: Run lib microservice tests
         run: |
           cd servers/lib
           yarn install
           yarn test -u
           yarn test -i
-          pwd
         env:
           PORT: 4001
           LOCAL_PATH: ${{ github.workspace }}/files
@@ -53,3 +61,6 @@ jobs:
         with:
           files: servers/lib/coverage/clover.xml
           flags: lib-microservice
+
+      - name: print working directory
+        run: pwd
