--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,15 +32,6 @@ jobs:
           yarn install	
           yarn build
 
-      - name: print working directory
-        run: pwd
-
-      - name: Upload unit, integration, and e2e test coverage for all to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: servers/lib/coverage/clover.xml
-          flags: lib-microservice
-
       - name: Run lib microservice tests
         run: |
           cd servers/lib
@@ -59,8 +50,5 @@ jobs:
       - name: Upload unit, integration, and e2e test coverage for all to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: ./servers/lib/coverage/clover.xml
+          files: ${{ github.workspace }}/servers/lib/coverage/clover.xml
           flags: lib-microservice
-
-      - name: print working directory
-        run: pwd
