--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -48,7 +48,7 @@ jobs:
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
       - name: Upload unit, integration, and e2e test coverage for all to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v2
         with:
-          files: ${{ github.workspace }}/servers/lib/coverage/clover.xml
-          flags: lib-microservice
+          files: servers/lib/coverage/clover.xml
+          flags: lib-browser-test
