Adds Docs and creates docs website
  - Adds mkdocs-based documentation website.
  - Adds the skeleton structure to support hosting of
    multiple versions of documentation using script/docs.sh
  - Restructures and improves the existing documentation
  - Updates to diagrams to reflect new changes in the code
  - Removes the unused jupyterlab config and
    servers/auth skeleton code
  - Adds github action for documentation and updates
    client and server github actions to not run for
    documentation updates

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,8 +2,14 @@ name: Check the server microservices
 
 on:
   push:
+    paths-ignore:
+      - 'docs/**'
   pull_request:
+    paths-ignore:
+      - 'docs/**'
   workflow_dispatch:
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   test:
