--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "Asger Busk Breinholm",
     "Mathias Brændgaard"
   ],
-  "license": "The INTO-CPS Association",
+  "license": "SEE LICENSE IN <LICENSE.md>",
   "private": false,
   "type": "module",
   "scripts": {
