--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -2,8 +2,14 @@ name: Make quality checks on the client react SPA application
 
 on:
   push:
+    paths-ignore:
+      - 'docs/**'
   pull_request:
+    paths-ignore:
+      - 'docs/**'
   workflow_dispatch:
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   client:
