Updates github workflow for docs
  - Cleans up task naming of docs github workflow
  - Adds instructions for generating docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,6 @@ jobs:
           configfile: 'mkdocs.yml'
 
 
-      - name: build docs
+      - name: show contents of compiled docs
         run: |
           ls site
