--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -35,7 +35,7 @@ jobs:
           cd client/	
           ./script/install.bash 
           yarn build
-          yarn configapp dev
+          yarn configapp ci
       - name: Run client unit and integration tests
         run: |
           cd client/	
@@ -43,7 +43,7 @@ jobs:
           yarn test -u
           yarn test -i
       - name: 'Upload Artifact'
-        if: always()
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: E2E-error-trace
