--- a/mkdocs_offline.yml
+++ b/mkdocs_offline.yml
@@ -20,8 +20,16 @@ plugins:
 nav:
   - Home: index.md
   - Admin:
-      - website: admin/client/CLIENT.md
-      - library microservice: admin/servers/lib/LIB-MS.md
+      - Host Install:
+        - Trial: admin/trial.md
+        - Production: admin/host.md
+      - Vagrant:
+        - Base Box: admin/vagrant/base-box.md
+        - Single Machine: admin/vagrant/single-machine.md
+        - Two Machines: admin/vagrant/two-machines.md
+      - Separate Packages:
+        - website: admin/client/CLIENT.md
+        - library microservice: admin/servers/lib/LIB-MS.md
   - User:
       - Features: user/features.md
       - Website: user/website/index.md
