Adds skeleton code from lib microservice
  Adds all the code from lib microservice and then updates
  the tsconfig

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# compiled output
+/dist
+/node_modules
+
 # Logs
 logs
 *.log
@@ -120,6 +124,23 @@ test_results/
 servers/.DS_Store
 data/.DS_Store
 **/.DS_Store
+.DS_Store
 
 # Built docs
 site/
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
