--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lib",
   "version": "0.0.1",
-  "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
-  "author": "phillip.boe.jensen@gmail.com",
+  "description": "REST API wrapper for a digital twin",
+  "author": "prasad.talasila@gmail.com",
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "scripts": {
