--- a/servers/execution/runner/.eslintrc
+++ b/servers/execution/runner/.eslintrc
@@ -1,10 +1,12 @@
 {
   "env": {
     "jest": true,
+    "jest/globals": true,
     "node": true
   },
   "extends": [
     "eslint:recommended",
+    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
@@ -21,7 +23,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "parser": "@babel/eslint-parser",
     "requireConfigFile": false,
     "ecmaVersion": 2022,
     "sourceType": "module" // Allows for the use of imports
@@ -40,7 +41,7 @@
 
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": ["*.ts"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "requireConfigFile": false,
