--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -43,9 +43,11 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "prettier": "^3.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.0.0",
