--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,7 +12,7 @@ on:
       - 'docs/**'
 
 jobs:
-  test:
+  test-lib-ms:
     runs-on: ubuntu-latest
 
     steps:
@@ -58,3 +58,49 @@ jobs:
         with:
           files: servers/lib/coverage/clover.xml
           flags: lib-microservice
+
+  test-runner:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "yarn"
+          cache-dependency-path: "**/yarn.lock"
+
+      - name: Run the linting checks
+        run: |
+          cd sservers/execution/runner
+          yarn install
+          yarn syntax
+
+      - name: Build the runner microservice
+        run: |
+          cd servers/execution/runner	
+          yarn install	
+          yarn build
+
+      - name: Run runner microservice tests
+        run: |
+          cd servers/execution/runner
+          yarn install
+          yarn test -u
+        env:
+          PORT: 4001
+          LOCAL_PATH: ${{ github.workspace }}/files
+          GITLAB_GROUP: dtaas
+          GITLAB_URL: https://gitlab.com/api/graphql
+          TOKEN: token
+          MODE: gitlab
+          LOG_LEVEL: debug
+          APOLLO_PATH: /lib
+      - name: Upload test coverage of runner microservice to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: servers/execution/runner/coverage/clover.xml
+          flags: runner-microservice
