--- a/servers/lib/.eslintrc
+++ b/servers/lib/.eslintrc
@@ -1,10 +1,12 @@
 {
   "env": {
     "jest": true,
+    "jest/globals": true,
     "node": true
   },
   "extends": [
     "eslint:recommended",
+    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
@@ -21,9 +23,8 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "parser": "@babel/eslint-parser",
     "requireConfigFile": false,
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2022,
     "sourceType": "module" // Allows for the use of imports
   },
   "plugins": ["jest", "@typescript-eslint", "import"],
@@ -40,7 +41,7 @@
 
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": ["*.ts"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "requireConfigFile": false,
