--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lib",
   "version": "0.0.1",
-  "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
-  "author": "phillip.boe.jensen@gmail.com",
+  "description": "REST API wrapper for a digital twin",
+  "author": "prasad.talasila@gmail.com",
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "scripts": {
@@ -37,47 +37,21 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
-    "prettier": "^2.3.2",
+    "prettier": "^3.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "../dist/",
-      "../test/",
-      "../src/app.module.ts",
-      "../src/main.ts",
-      "../src/files/files.module.ts",
-      "../coverage/",
-      "../src/files/queries.ts",
-      "../lib/util.ts",
-      "../lib/src/types.ts"
-    ],
-    "rootDir": "",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "testEnvironment": "node"
   }
 }
