--- a/servers/lib/tsconfig.json
+++ b/servers/lib/tsconfig.json
@@ -1,22 +1,31 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
+    "allowSyntheticDefaultImports": true, //allow default imports from modules with no default export
     "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
+    "declaration": true, //generate declaration '.d.ts' files
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true, //allow experimental decorators for es7
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "incremental": true,
+    "module": "commonjs", //use node module system
+    "moduleResolution": "node", //use node module resolution strategy node
+    //"noImplicitAny": true, //raise error on any type
+    "noImplicitReturns": true, //raise error on implicit returns
+    "noUnusedLocals": true, //raise error on unused locals
+    "noUnusedParameters": true, //raise no error on unused parameters
+    "noFallthroughCasesInSwitch": false,
+    "outDir": "./dist",
+    "removeComments": true, //remove comments from build
+    "skipLibCheck": true,
+    "sourceMap": true, //generate .map files
+    "strictBindCallApply": false,
+    //"strictNullChecks": true,
+    //"strict": true, //enable all strict type-checking options
+    "target": "es2022",
+    "types": ["node", "jest"], //use node and jest types
+    "typeRoots": [
+      "node_modules/@types" //use node_modules/@types for type definitions
+    ],
   },
   "exclude": ["**/node_modules/*", "./dist"]
 }
