--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -38,7 +38,7 @@ jobs:
           yarn install	
           yarn build
 
-      - name: Run lib microservice tests
+      - name: Run unit and integration tests
         run: |
           cd servers/lib
           yarn install
@@ -53,7 +53,8 @@ jobs:
           MODE: gitlab
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
-      - name: Upload unit, integration, and e2e test coverage for all to Codecov
+
+      - name: Upload unit and integration test coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: servers/lib/coverage/clover.xml
