--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,6 @@
+comment:
+  layout: "header, diff, files, components"  # show component info in the PR comment
+  
 coverage:
   status:
     project:
@@ -14,7 +17,11 @@ codecov:
 
 component_management:
   individual_components:
-    - component_id: client  # this is an identifier that should not be changed
-      name: client  # this is a display name, and can be changed freely
+    - component_id: client_website  # this is an identifier that should not be changed
+      name: Website  # this is a display name, and can be changed freely
       paths:
-        - client
+        - client/**
+    - component_id: lib_ms  # this is an identifier that should not be changed
+      name: Lib Microservice  # this is a display name, and can be changed freely
+      paths:
+        - servers/lib/**
