--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -47,10 +47,10 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: client/coverage/clover.xml
-          flags: client-unit-test
+          flags: client-unit-integration-tests
 
       - name: Upload browser test coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: client/playwright-report/results.json
-          flags: client-browser-test
+          flags: client-browser-tests
