--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -58,4 +58,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: servers/lib/coverage/clover.xml
-          flags: lib-microservice
+          flags: lib-microservice-tests
