Improves code quality configuration (#92)
  - adds markdown linter to codeclimate checker.
  - remove incorrect excludes from codeclimate.yml
  - consolidates eslint configuration to top-level and 
    makes codeclimate use this eslintrc
  - remove invalid browser tests from github actions.
  - adjusts github actions to improve codecov reporting.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -47,10 +47,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: client/coverage/clover.xml
-          flags: client-unit-test
-
-      - name: Upload browser test coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: client/playwright-report/results.json
-          flags: client-browser-test
+          flags: client-unit-integration-tests
