Adds lifecycle support and creates npm package
  - Adds Lifecycle manager to support DT lifecycle phases.
  - The past invocations of DT lifecycle operations are
    tracked via a queue. This will eventually help with
    replay of operations on DT.
  - The invocations of lifecycle operations are completely
    asynchronous. It is possible to run all the phases at the
    same time.
  - The runner code is ready to be published as npm package.
    The README contains instructions on setting up private
    npm repository for development purposes.
  - FIX: There are no tests

--- a/servers/execution/runner/jest.config.json
+++ b/servers/execution/runner/jest.config.json
@@ -2,14 +2,13 @@
   "preset": "ts-jest",
   "testEnvironment": "node",
   "transform": {
-    "^.+\\.(t|j)sx?$": [
+    "(src|test)/^.+\\.(t|j)sx?$": [
       "ts-jest",
       {
         "useESM": true
       }
     ]
   },
-  "transformIgnorePatterns": ["/node_modules/(?![execa]).+\\.js$"],
   "collectCoverage": true,
   "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
   "collectCoverageFrom": ["src/**/*.{ts,js}"],
@@ -32,5 +31,5 @@
   },
   "verbose": true,
   "testRegex": "./test/.*\\.spec.tsx?$",
-  "modulePaths": ["<rootDir>/src/"]
+  "modulePaths": ["<rootDir>/src/", "<rootDir>/test/"]
 }
