--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "runner",
+  "name": "@dtaas/runner",
   "version": "0.0.1",
-  "description": "\"DT Runner\"",
-  "main": "dist/index.js",
+  "description": "DT Runner",
+  "main": "dist/src/runner.js",
   "repository": "https://github.com/into-cps-association/DTaaS.git",
   "author": "prasadtalasila",
   "license": "SEE LICENSE IN <LICENSE.md>",
@@ -15,13 +15,20 @@
     "syntax": "script/syntax.bash",
     "test": "script/test.bash"
   },
+  "bin": {
+    "runner": "./dist/src/runner.js"
+  },
+  "files": [
+    "dist/",
+    "script/"
+  ],
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
-    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.9.0",
@@ -35,6 +42,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "execa": "^7.2.0"
+    "cross-env": "^7.0.3",
+    "execa": "^7.2.0",
+    "get-stream": "^7.0.1"
   }
 }
