--- a/servers/execution/runner/tsconfig.json
+++ b/servers/execution/runner/tsconfig.json
@@ -13,24 +13,21 @@
     ],
     "module": "ES2022", //use node module system
     "moduleResolution": "node", //use node module resolution strategy node
-    //"noImplicitAny": true, //raise error on any type
     "noImplicitReturns": true, //raise error on implicit returns
     "noUnusedLocals": true, //raise error on unused locals
     "noUnusedParameters": true, //raise no error on unused parameters
-    "noFallthroughCasesInSwitch": false,
+    "noFallthroughCasesInSwitch": true,
     "outDir": "dist",
     "removeComments": true, //remove comments from build
     "skipLibCheck": true,
     "sourceMap": true, //generate .map files
-    "strictBindCallApply": false,
-    //"strictNullChecks": true,
-    //"strict": true, //enable all strict type-checking options
+    "strict": true, //enable all strict type-checking options
     "target": "es2022",
     "types": ["node", "jest"], //use node and jest types
     "typeRoots": [
       "node_modules/@types" //use node_modules/@types for type definitions
     ],
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["**/node_modules/*", "./dist"]
 }
