Updates the mkdocs config for generating pdf files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,3 +69,10 @@ markdown_extensions:
       alternate_style: true   
   - mdx_math:
       enable_dollar_delimiter: True
+
+plugins:
+    - with-pdf:
+        cover: true
+        cover_logo: assets/into-cps-logo.png
+        cover_subtitle: ""
+        output_path: pdf/DTaaS-docs.pdf
