--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,8 +71,12 @@ markdown_extensions:
       enable_dollar_delimiter: True
 
 plugins:
-    - with-pdf:
-        cover: true
-        cover_logo: assets/into-cps-logo.png
-        cover_subtitle: ""
-        output_path: pdf/DTaaS-docs.pdf
+  - offline
+  - open-in-new-tab
+  - search
+  - with-pdf:
+      author: "DTaaS Development Team"
+      cover: true
+      cover_logo: assets/into-cps-logo.png
+      cover_subtitle: ""
+      output_path: pdf/DTaaS-docs.pdf
