--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -42,8 +42,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@nestjs/common": "^10.2.4",
+    "@nestjs/core": "^10.2.4",
+    "@nestjs/platform-express": "^10.2.4",
     "cross-env": "^7.0.3",
     "execa": "^7.2.0",
-    "get-stream": "^7.0.1"
+    "get-stream": "^7.0.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   }
 }
